--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "pack/core/start/vim-autoclose"]
 	path = pack/core/start/vim-autoclose
 	url = https://github.com/Townk/vim-autoclose
+[submodule "pack/core/start/vim-multiple-cursors"]
+	path = pack/core/start/vim-multiple-cursors
+	url = https://github.com/terryma/vim-multiple-cursors
