--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,12 @@
 [submodule "pack/lang/opt/vim-pug"]
 	path = pack/lang/opt/vim-pug
 	url = https://github.com/digitaltoad/vim-pug
+[submodule "pack/lang/opt/emmet-vim"]
+	path = pack/lang/opt/emmet-vim
+	url = https://github.com/mattn/emmet-vim
+[submodule "pack/lang/opt/jedi-vim"]
+	path = pack/lang/opt/jedi-vim
+	url = https://github.com/davidhalter/jedi-vim
+[submodule "pack/lang/opt/vim-javascript"]
+	path = pack/lang/opt/vim-javascript
+	url = https://github.com/pangloss/vim-javascript
