tinkering on vimrc

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,9 +14,12 @@
 [submodule "pack/lang/opt/vim-pug"]
 	path = pack/lang/opt/vim-pug
 	url = https://github.com/digitaltoad/vim-pug
-[submodule "pack/lang/opt/emmet-vim"]
-	path = pack/lang/opt/emmet-vim
-	url = https://github.com/mattn/emmet-vim
-[submodule "pack/lang/opt/jedi-vim"]
-	path = pack/lang/opt/jedi-vim
+[submodule "pack/lang/start/jedi-vim"]
+	path = pack/lang/start/jedi-vim
 	url = https://github.com/davidhalter/jedi-vim
+[submodule "pack/lang/start/vim-javascript"]
+	path = pack/lang/start/vim-javascript
+	url = https://github.com/pangloss/vim-javascript
+[submodule "pack/lang/start/emmet-vim"]
+	path = pack/lang/start/emmet-vim
+	url = https://github.com/mattn/emmet-vim
