--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pack/core/start/nerdtree"]
-	path = pack/core/start/nerdtree
-	url = https://github.com/preservim/nerdtree.git
+  path = pack/core/start/nerdtree
+  url = git@github.com:preservim/nerdtree.git
